# pldm-sim

./: .gitignore  mctp_test_send.c  meson.build  meson_options.txt  pldm_sim.cpp  run_test.sh  test_fw_pkg.pldm  test_metadata.json
scenarios/: gpu-terminus.json  reject-update.json  verify-failure-renode.json  verify-failure.json
